Removed Spring Boot. Changed project's structure

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,9 +5,11 @@
     <title>Validation</title>
     <link rel="stylesheet"
           type="text/css"
-          th:href="@{css/style.css}"/>
+          th:href="@{resources/style.css}"/>
 </head>
 <body>
+
 Congratulations! You log in successfully.
+
 </body>
 </html>
