--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -20,12 +20,15 @@
         <input type="text" th:field="*{login}" th:placeholder="#{login.username}"
                class="form-control"
                required="" autofocus=""/>
+        <p class="error" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></p>
+        <input type="email" th:field="*{email}" th:placeholder="#{register.email}"
+               class="form-control"
+               required=""/>
+        <p class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
         <input type="password" th:field="*{password}" th:placeholder="#{register.password}"
                class="form-control"
                required=""/>
-        <input type="password" th:placeholder="#{register.confirm.password}"
-               class="form-control"
-               required=""/>
+        <p class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
         <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{register.submit}"></button>
     </form>
 </div>
